# berlin-biyori-bot

./: pyproject.toml
.github/workflows/: post.yml
agents/: formatter.py  ogp.py  orchestrator.py  poster.py  scraper.py  translator.py
data/: posted_urls.json
prompts/: translate.txt
